--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <META content="Lista de Manga index,Read Lista de Manga index, Lista de Manga index manga, Leer Manga en Español gratis en NineManga.com" name=Keywords>
+    <META content="Lista de Manga index Free Manga Online, Lista de Manga index manga, Lista de Manga index Español manga, Leer Manga en Español gratis en NineManga.com" name=Description>
     <title>Re:codigo</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
@@ -11,6 +13,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="icon" type="image/png" href="images/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <meta property="og:site_name" content="Re:codigo" />
+    <meta property="og:title" content="Re:codigo" />
+    <meta property="og:description" content="Re:codigo es tu canal de Androi Profesional" />
+    <meta property="og:image" content="images/hero.jpg" />
+    <meta name="twitter:card" content="book">
+    <meta name="twitter:domain" content="https://recodigo.com">
+    <meta name="twitter:site" content="@fourauto">
+    <meta name="twitter:title" content="Re:codigo">
+    <meta name="twitter:description" content="Re:codigo es tu canal de Androi Profesional" />
+    <meta name="twitter:image" content="http://www.ninemanga.com/files/img/ninemanga.png" />
 </head>
 
 <body>
