--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <meta property="og:site_name" content="Re:codigo" />
     <meta property="og:title" content="Re:codigo" />
-    <meta property="og:description" content="Re:codigo es tu canal de Androi Profesional" />
+    <meta property="og:description" content="Re:codigo es tu canal de Android Profesional" />
     <meta property="og:image" content="https://i.ibb.co/Vxr1mTy/hero.jpg" />
     <meta name="twitter:card" content="book">
     <meta name="twitter:domain" content="https://recodigo.com">
     <meta name="twitter:site" content="@saulmaos">
     <meta name="twitter:title" content="Re:codigo">
-    <meta name="twitter:description" content="Re:codigo es tu canal de Androi Profesional" />
+    <meta name="twitter:description" content="Re:codigo es tu canal de Android Profesional" />
     <meta name="twitter:image" content="https://i.ibb.co/Vxr1mTy/hero.jpg" />
 </head>
 
