--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <META content="Aprende android, aprende kotlin, aprende room, aprende rxjava, aprende viewmodel en recodigo.com" name=Keywords>
     <META content="Tu canal de Android Profesional en recodigo.com" name=Description>
+    <meta name="robots" content="index, follow">
     <title>Re:codigo</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
