--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <meta property="og:title" content="Re:codigo" />
     <meta property="og:description" content="Re:codigo es tu canal de Android Profesional" />
     <meta property="og:image" content="https://i.ibb.co/Vxr1mTy/hero.jpg" />
-    <meta name="twitter:card" content="book">
-    <meta name="twitter:domain" content="https://recodigo.com">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@saulmaos">
+    <meta name="twitter:creator" content="@saulmaos">
     <meta name="twitter:title" content="Re:codigo">
     <meta name="twitter:description" content="Re:codigo es tu canal de Android Profesional" />
     <meta name="twitter:image" content="https://i.ibb.co/Vxr1mTy/hero.jpg" />
+    <meta name="twitter:domain" content="https://recodigo.com">
 </head>
 
 <body>
