added rxjava course link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p><a href="https://www.youtube.com/watch?v=UVK-yetneRQ&list=PLOAg1O9FnNv7HS_gEj848u-X9bZs6x59n">LiveData</a></p>
                     <p><a href="https://www.youtube.com/watch?v=1HB94yHK9rg&list=PLOAg1O9FnNv4cztBfUbO66pJeFYJVQT3F">Room</a></p>
                     <p><a href="https://www.youtube.com/watch?v=KkPFKnvRVWw&list=PLOAg1O9FnNv5q8VMOCheGlFafNVWgCWWP">Firebase</a></p>
-                    <p><a href="https://www.youtube.com/channel/UCAOwsCYn5hoxJXQiDtqoNsA/videos">RxJava 2 (próximamente)</a></p>
+                    <p><a href="https://www.youtube.com/watch?v=VoVGv29qXWM&list=PLOAg1O9FnNv7ugERDHfZjQpHPIsPhSD0X">RxJava 2</a></p>
                     <p><a href="https://www.youtube.com/channel/UCAOwsCYn5hoxJXQiDtqoNsA/videos">Dagger 2 (próximamente)</a></p>
                 </div>
             </div>
